T-11800 standardtotararesponsive: Fixed tabs so that they don't overflow into the text below (when there is one row)
Reviewed-on: https://review.totaralms.com/4395
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/core.css
+++ b/theme/standardtotararesponsive/style/core.css
@@ -662,7 +662,9 @@ input[type="checkbox"] {
 .tabtree {
   position: relative;
 }
-
+div.tabtree2 {
+    margin-bottom: 24px;
+}
 .tabtree .tabrow0 {
   margin: 0;
 }
@@ -776,6 +778,9 @@ input[type="checkbox"] {
 }
 .tabtree .tabrow1 li.here .empty {
     display: none;
+}
+.tabtree .tabrow1 li {
+    line-height: 20px;
 }
 .dir-rtl .tabtree .tabrow0 li.here .empty {
     right: 0;
